# BC-SECURITY_Empire

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .yamlfmt.yaml  5.0-plugins.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  changelog  conftest.py  download-starkiller.sh  empire.py  logging.md  ps-empire  pyproject.toml  pytest.ini  v2-api.md
.github/: CONTRIBUTING.md  FUNDING.yml  ci-and-release.md  ci.md  cst-config-base.yaml  cst-config-docker.yaml  docker-compose.yml
.github/.workflow/: dockerimage.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/actions/clean-merge/: action.yml
.github/actions/update-starkiller/: action.yml
.github/install_tests/: Debian10.Dockerfile  Debian11.Dockerfile  InstallTest.Dockerfile  KaliRolling.Dockerfile  ParrotRolling.Dockerfile  Ubuntu2004.Dockerfile  Ubuntu2204.Dockerfile  cst-config-debian.yaml  cst-config-debian10.yaml  cst-config-debian11.yaml  cst-config-install-base.yaml  cst-config-kali.yaml  cst-config-kalirolling.yaml  cst-config-parrotrolling.yaml  cst-config-ubuntu.yaml  cst-config-ubuntu2004.yaml  cst-config-ubuntu2204.yaml  docker-compose-install-tests.yml  run-all-cst.sh
.github/workflows/: cherry-pick-main.yml  dockerimage.yml  lint-and-test.yml  lint.yml  prerelease-sponsor-kali-merge-private.yml  prerelease-sponsors-merge-public.yml  release-private-start.yml  release-private-tag.yml  release-public-start.yml  release-public-tag.yml  release-sponsor-after-tag.yml  release-sponsor-kali-start.yml  release-sponsor-kali-tag.yml  release-sponsor-start.yml  release-sponsor-tag.yml
docs/: README.md  SUMMARY.md  ip-filtering.md
docs/.gitbook/includes/: sequencediagram-particip....md
docs/agents/: README.md  staging.md
docs/agents/go/: README.md  mainagentclass.md  packethandlerclass.md  template.md
docs/agents/python/: README.md  mainagentclass.md  packethandlerclass.md  stageclass.md
docs/database/: README.md
docs/interfaces/starkiller/: README.md  agent-tasks.md
docs/listeners/: README.md  dropbox.md  http.md  malleable-c2.md  onedrive.md
docs/logging/: logging.md
docs/modules/: README.md  autorun_modules.md  module-configuration.md
docs/modules/module-development/: README.md  bof-modules.md  c-modules.md  powershell-modules.md
docs/plugins/: README.md  getting-started.md  hooks-and-filters.md  plugin-development.md
docs/plugins/development/: README.md  database-usage.md  execution.md  imports.md  lifecycle-hooks.md  migration.md  notifications.md  plugin-tasks.md  settings.md
docs/quickstart/: README.md  installation.md  resetting.md  server.md
docs/quickstart/configuration/: README.md  client.md  server.md
docs/quickstart/installation/: README.md  common-issues.md
docs/restful-api/: README.md
docs/settings/: bypasses.md  logging.md
docs/stagers/: multi_generate_agent.md
docs/starkiller/: README.md  agent-tasks.md
empire/: arguments.py  config_manager.py
empire/client/: client.py  config.yaml
empire/client/src/: EmpireCliConfig.py  EmpireCliState.py  Shortcut.py  ShortcutHandler.py  bindings.py
empire/scripts/: sync_empire_compiler.py  sync_starkiller.py
empire/server/: config.yaml  server.py
empire/server/api/: api_router.py  app.py  jwt_auth.py  middleware.py
empire/server/bypasses/: ETWBypass.yaml  IronPythonBypass.yaml  LibermanBypass.yaml  MattifestationBypass.yaml  RastaMouseBypass.yaml  ScriptBlockLogBypass.yaml
empire/server/common/: agents.py  bypasses.py  config.py  credentials.py  empire.py  encryption.py  events.py  helpers.py  hooks.py  hooks_internal.py  http.py  listeners.py  messages.py  module_models.py  modules.py  packets.py  plugins.py  pylnk.py  socks.py  stagers.py  templating.py  users.py
empire/server/core/: agent_communication_service.py  agent_file_service.py  agent_service.py  agent_socks_service.py  agent_task_service.py  bypass_service.py  config.py  credential_service.py  dotnet.py  download_service.py  exceptions.py  go.py  hooks.py  hooks_internal.py  host_process_service.py  host_service.py  ip_service.py  listener_service.py  listener_template_service.py  module_models.py  module_service.py  obfuscation_service.py  plugin_registry_service.py  plugin_service.py  plugin_task_service.py  plugins.py  profile_service.py  stager_generation_service.py  stager_service.py  stager_template_service.py  tag_service.py  user_service.py
empire/server/data/: confuser.crproj
empire/server/database/: base.py  defaults.py  models.py
empire/server/listeners/: dbx.py  http.py  http_com.py  http_foreign.py  http_hop.py  http_malleable.py  http_mapi.py  meterpreter.py  onedrive.py  port_forward_pivot.py  redirector.py  smb.py  template.py
empire/server/modules/: powershell_template.py  powershell_template.yaml  python_jobs_template.py  python_template.py  python_template.yaml
empire/server/plugins/: basic_reporting.plugin  csharpserver.plugin  example.plugin  reverseshell_stager_server.plugin  websockify.plugin  websockify_server.plugin
empire/server/stagers/: CSharpPS.yaml  CSharpPy.yaml  Sharpire.yaml
empire/server/utils/: bof_packer.py  data_util.py  datetime_util.py  (+10 more)
empire/test/: conftest.py  test-upload-2.yaml  test_admin_api.py  test_agent_api.py  test_agent_checkins_api.py  test_agent_communication_service.py  test_agent_file_api.py  test_agent_service.py  test_agent_task_api.py  test_agent_task_service.py  test_agents.py  test_async_hook_db_session.py  test_auth.py  test_bof_packer.py  test_bypass_api.py  test_client_config.yaml  test_common_agents.py  test_config.py  test_config.yaml  test_config_mysql.yaml  test_credential_api.py  test_data_util.py  test_download_api.py  test_download_service.py  test_empire.db-shm  test_empire.db.backup  test_encryption.py  test_go.py  test_health_api.py  test_helpers.py  test_helpers_color.py  test_hooks.py  test_hooks_internal.py  test_host_api.py  test_host_process_api.py  test_ip_api.py  test_ip_service.py  test_keyword_api.py  test_listener_api.py  test_listener_generate_launcher.py  (+33 more)
setup/: cert.sh  checkout-latest-tag.sh  install.sh
(+1035 files in other folders)
